Update logo image source to Imgur link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="container">
     <aside class="sidebar" id="sidebar">
       <div class="brand">
-        <img src="file:///H:\Users\Helio Maia\Documents\EUPPC\logo.png" alt=""/>
+        <img src="https://imgur.com/BU2Meiy" alt=""/>
         <h1>Cinema & EUPPC</h1>
       </div>
       <div class="search">
