Update image source URL in index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="container">
     <aside class="sidebar" id="sidebar">
       <div class="brand">
-        <img src="https://imgur.com/BU2Meiy" alt=""/>
+        <img src="https://i.imgur.com/BU2Meiy.png" alt="EUPPC"/>
         <h1>Cinema & EUPPC</h1>
       </div>
       <div class="search">
